@@ -1,6 +1,6 @@
 #!/bin/sh
 
-/bin/rm -rf missing ltmain.sh install-sh  depcomp configure autom4te.cache aclocal.m4 INSTALL compile
+/bin/rm -rf missing ltmain.sh install-sh  depcomp configure autom4te.cache aclocal.m4 INSTALL compile libtool
 /bin/rm -rf Makefile.in apps/Makefile.in autoscan.log config.h.in tuning/Makefile.in
 
 # Do autoreconf -i to recover.
